--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: var(--tg-theme-text-color);
+  background-color: var(--tg-theme-bg-color);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -54,10 +54,10 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: var(--tg-theme-text-color);
+    background-color: var(--tg-theme-text-color);
   }
   a:hover {
     color: #747bff;
