--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
+/* 
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  
 }
 
 .logo {
@@ -39,4 +42,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
