Search bar improved(SearchAndAdd)

--- a/src/pages/EventsPage/EventsPage.scss
+++ b/src/pages/EventsPage/EventsPage.scss
@@ -1,8 +1,9 @@
 .Search{
-    fieldset{
+    
         background-color: white;
         min-width: 100px;
-    }
+        height: 62px;
+        border-radius: 9px;
     
  
 }
@@ -15,5 +16,5 @@
 }
 
 .AddButton{
-    margin-left: 10px;
+    margin-left: 6px;
 }
