--- a/src/pages/EventsPage/EventsPage.scss
+++ b/src/pages/EventsPage/EventsPage.scss
@@ -1,20 +1,30 @@
-.Search{
-    
-        background-color: white;
-        min-width: 100px;
-        height: 62px;
-        border-radius: 9px;
-    
- 
+
+
+.Events{
+    margin: 15px 0px 0;
+    font-family: "Inter";
 }
 
-.SearchAndAdd{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+.Events-Card{
+    margin: 10px 0;
+    padding: 8px;
+    border-radius: 12px !important;
+    cursor: pointer;
+    div{
+        :hover{
+            background-color: rgb(230, 230, 230);
+        }
+    }
+
+    b{
+        margin: 0;
+        padding:0;
+        font-size: 16px;
+    }
+    p{
+        margin: 5px 0;
+        // padding:0
+        font-size: 14px;
+    }
 }
 
-.AddButton{
-    margin-left: 6px;
-}
