--- a/src/pages/EventsPage/EventsPage.scss
+++ b/src/pages/EventsPage/EventsPage.scss
@@ -14,7 +14,9 @@
     padding: 8px;
     border-radius: 12px !important;
     cursor: pointer;
-    
+    &:hover{
+        background-color: #e0e0e0 ;
+    }
 
     b{
         margin: 0;
