--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -8,14 +8,33 @@
         background-color: #e0e0e0 ;
     }
 
-    b{
+    #title{
         margin: 0;
         padding:0;
-        font-size: 16px;
+        font-size: 18px;
     }
     p{
         margin: 5px 0;
         // padding:0
         font-size: 14px;
+        font-weight: 500;
+    }
+    #date{
+        font-size: 16px;
+        font-weight: 400;
+        // text-decoration: underline;
+        
+    }
+    #description{
+        font-size: 16px;
+        font-weight: 400;
     }
 }
+
+// .TitleDateWrap{
+//     display: flex;
+//     flex-direction: row;
+//     justify-content: space-between;
+//     align-items: start;
+//     max-width: 80%;
+// }
