reduced bottom block margin

--- a/src/pages/EventsPage/EventsPage.scss
+++ b/src/pages/EventsPage/EventsPage.scss
@@ -4,6 +4,10 @@
     justify-content: end;
 }
 
+.EventsWrap{
+    margin-top: 25px;
+}
+
 .Events{
     margin: 15px 0px 0;
     font-family: "Inter";
@@ -12,5 +16,9 @@
 .Events-Card{
     margin: 10px 0;
     
+}
+
+.Heading{ 
+    margin-top: 0; 
 }
 
