CreateEventPage layout complete!

--- a/src/components/Heading/Heading.scss
+++ b/src/components/Heading/Heading.scss
@@ -6,7 +6,18 @@
     font-optical-sizing: auto;
     font-style: normal;
     color: #E3E6EB;
-    margin-left: auto;
-    margin-right: auto;
+    
+    &_align_center{
+        margin-left: auto;
+        margin-right: auto;
+    }
+    &_align_left{
+        margin-left: 0;
+        margin-right: auto;
+    }
+    &_align_right{
+        margin-right: 0;
+        margin-left: auto;
+    }
     
 }
