--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
+    
 $ButtonBlue: #2445B2;
 $ButtonBlueHover: #233f9c;
 $ButtonWhite: white;
@@ -9,13 +11,16 @@ $ButtonWhiteHover: rgb(247, 247, 247);
     border-radius: 7px;
     border: 1px solid; 
     
-    font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-    line-height: 1.5;
+    font-family: "Inter";
     font-weight: 500;
+    font-size: 16px;
+    font-optical-sizing: auto;
+    font-style: normal;
+    color: #E3E6EB;
 
     &_size_big{     
         max-width: 312px;
-        height: 40px;
+        height: 50px;
         width: 100%;
     } 
      &_size_small{
