--- a/src/pages/EventsPage/EventsPage.scss
+++ b/src/pages/EventsPage/EventsPage.scss
@@ -1,3 +1,7 @@
+.HeaderSearchBarWrapper{
+    position: sticky;
+}
+
 .moreButtonBlock{
     display: flex;
     flex-direction: row;
@@ -21,4 +25,5 @@
 .Heading{ 
     margin-top: 0; 
 }
+
 
