trying to remove horizontal scrollbar

--- a/src/components/TimeSlotsSection/TimeSlotsSection.scss
+++ b/src/components/TimeSlotsSection/TimeSlotsSection.scss
@@ -23,6 +23,7 @@
         row-gap: 15px;
         
         overflow-y: scroll;
+        overflow-x: hidden;
         scrollbar-width: 8px;
         height: 234px
         
