--- a/src/pages/CreateEventPage/CreateEventPage.scss
+++ b/src/pages/CreateEventPage/CreateEventPage.scss
@@ -1,7 +1,7 @@
 .CreateEventPage{
-    overflow-y: hidden;
-    position: fixed;
-    inset: 0;
-    top: 10px;
+    // overflow-y: hidden;
+    // position: fixed;
+    // inset: 0;
+    // top: 10px;
 }
 
