basic modal functionality added(needs some adjustments tho)

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -50,7 +50,8 @@ $ButtonWhiteHover: rgb(247, 247, 247);
 
         &:hover{
             color: $ButtonBlueHover;
-            border-color: $ButtonBlueHover
+            border-color: $ButtonBlueHover;
+            cursor: pointer;
         }
     };
 
