--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,6 +2,19 @@
 .Header{
     display: flex;
     flex-direction: row;
-    justify-content:baseline
-    
+    justify-content: center;
+    align-items: center;
+    margin-top: 0;
+    &-H1{
+        width: 100%;
+        height: 100%;
+        
+        text-align: center;
+        font-family: Inter;
+        font-weight: 600;
+        font-size: 24px;
+        font-optical-sizing: auto;
+        font-style: normal;
+        color: #E3E6EB;
+    }    
 }
