--- a/src/components/AddTimeSlotModal/AddTimeSlotModal.scss
+++ b/src/components/AddTimeSlotModal/AddTimeSlotModal.scss
@@ -6,6 +6,10 @@
     border-radius: 22px;
     z-index: 1;
     border: 0;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     
     dialog{
         margin-top: -100px;
