finally fixed mobile popup clock position via theme

--- a/src/components/AddTimeSlotModal/AddTimeSlotModal.scss
+++ b/src/components/AddTimeSlotModal/AddTimeSlotModal.scss
@@ -33,6 +33,9 @@
         margin: 10px 0px;
 
     };
+    .MUIPoppersContainer{
+        height: 1080p;
+    }
     
 }
 .Modal-MainContentWrapper{
