--- a/src/components/TimeSlotsSection/TimeSlotsSection.scss
+++ b/src/components/TimeSlotsSection/TimeSlotsSection.scss
@@ -15,7 +15,7 @@
         position: static;
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: auto;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
         margin-top: 10px;
         padding-left: 10px;
         padding-right: 10px;
