--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,6 +1,7 @@
 .Card{
     
     padding: 8px;
+    margin-bottom: 10px;
     border-radius: 12px !important;
     cursor: pointer;
     background-color: white;
