--- a/src/pages/CreateEventPage/CreateEventPage.scss
+++ b/src/pages/CreateEventPage/CreateEventPage.scss
@@ -3,7 +3,19 @@
     // position: fixed;
     // inset: 0;
     // top: 10px;
-    
+    &-DateInput{
+        border-color: #2F54A5 ;
+        border-style: solid;
+        border-width: 3px;
+        border-radius: 5px;
+        width: 300px;
+        height: 45px;
+        background-color: #1D2D61;
+        color: white;
+        &::-webkit-calendar-picker-indicator{
+            background-color: aqua;
+        }
+    }
 }
 // .MuiPickerPopper-root{
 //     z-index: 2;
